fixtures/invalid/bad-task-status.lmk
@task status="later"
Use one of the fixed task statuses.
